--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -16,56 +16,51 @@ jobs:
       with:
         fetch-depth: 0
 
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ secrets.AWS_REGION }}
+    # - name: Configure AWS credentials
+    #   uses: aws-actions/configure-aws-credentials@v1
+    #   with:
+    #     aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+    #     aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    #     aws-region: ${{ secrets.AWS_REGION }}
 
-    - name: Login to Amazon ECR
-      id: login-ecr
-      uses: aws-actions/amazon-ecr-login@v1
+    # - name: Login to Amazon ECR
+    #   id: login-ecr
+    #   uses: aws-actions/amazon-ecr-login@v1
 
-    - name: Build, tag, and push the image to Amazon ECR
-      id: build-image
-      env:
-        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: codereview-test
-      run: |
-        # Build a docker container and push it to ECR 
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$GITHUB_SHA .
-        echo "Pushing image to ECR..."
-        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$GITHUB_SHA
-        echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$GITHUB_SHA"
-    - name: Deploy on AWS EC2
-      env:
-        PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY  }}
-        HOSTNAME: ${{ secrets.HOSTNAME  }}
-        USER_NAME: ${{ secrets.USERNAME  }}
-        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-      run: |
+    # - name: Build, tag, and push the image to Amazon ECR
+    #   id: build-image
+    #   env:
+    #     ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+    #     ECR_REPOSITORY: codereview-test
+    #   run: |
+    #     # Build a docker container and push it to ECR 
+    #     docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$GITHUB_SHA .
+    #     echo "Pushing image to ECR..."
+    #     docker push $ECR_REGISTRY/$ECR_REPOSITORY:$GITHUB_SHA
+    #     echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$GITHUB_SHA"
+    # - name: Deploy on AWS EC2
+    #   env:
+    #     PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY  }}
+    #     HOSTNAME: ${{ secrets.HOSTNAME  }}
+    #     USER_NAME: ${{ secrets.USERNAME  }}
+    #     ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+    #   run: |
         
-        echo "$PRIVATE_KEY" > private_key.pem && chmod 600 private_key.pem
-        ls
-        aws ecr get-login-password --region eu-central-1 | docker login --username AWS --password-stdin 522249388325.dkr.ecr.eu-central-1.amazonaws.com
-        sed -i -e 's/GITHUB_SHA/'"$GITHUB_SHA"'/' ${{ github.workspace }}/docker-compose.yml
-        sed -i -e 's/ECR_REGISTRY/'"$ECR_REGISTRY"'/' ${{ github.workspace }}/docker-compose.yml
-        scp -o StrictHostKeyChecking=no -i private_key.pem ${{ github.workspace }}/docker-compose.yml ${USER_NAME}@${HOSTNAME}:/tmp 
-        ssh -o StrictHostKeyChecking=no -i private_key.pem ${USER_NAME}@${HOSTNAME} '
-          aws ecr get-login-password --region eu-central-1 | docker login --username AWS --password-stdin 522249388325.dkr.ecr.eu-central-1.amazonaws.com
-          cd /tmp
-          # docker stop backend-flask
-          # docker rm backend-flask
-          docker-compose -p backend-flask up -d
-        '
-    - name: CodeGuru Reviewer
-      uses: aws-actions/codeguru-reviewer@v1.1
-      with:
-        s3_bucket: codeguru-reviewer-cicd-gitactions-bucket  # S3 Bucket with "codeguru-reviewer-*" prefixx
-        
-    - name: Upload review result
-      if: ${{ github.event_name != 'pull' }}
-      uses: github/codeql-action/upload-sarif@v1
-      with:
-        sarif_file: codeguru-results.sarif.json
+    #     echo "$PRIVATE_KEY" > private_key.pem && chmod 600 private_key.pem
+    #     ls
+    #     aws ecr get-login-password --region eu-central-1 | docker login --username AWS --password-stdin 522249388325.dkr.ecr.eu-central-1.amazonaws.com
+    #     sed -i -e 's/GITHUB_SHA/'"$GITHUB_SHA"'/' ${{ github.workspace }}/docker-compose.yml
+    #     sed -i -e 's/ECR_REGISTRY/'"$ECR_REGISTRY"'/' ${{ github.workspace }}/docker-compose.yml
+    #     scp -o StrictHostKeyChecking=no -i private_key.pem ${{ github.workspace }}/docker-compose.yml ${USER_NAME}@${HOSTNAME}:/tmp 
+    #     ssh -o StrictHostKeyChecking=no -i private_key.pem ${USER_NAME}@${HOSTNAME} '
+    #       aws ecr get-login-password --region eu-central-1 | docker login --username AWS --password-stdin 522249388325.dkr.ecr.eu-central-1.amazonaws.com
+    #       cd /tmp
+    #       # docker stop backend-flask
+    #       # docker rm backend-flask
+    #       docker-compose -p backend-flask up -d
+    #     '
+    - name: SonarCloud Scan
+      uses: SonarSource/sonarcloud-github-action@master
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
